@@ -1,5 +1,6 @@
 2020-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
+	* Compiled definitions without GIO
 	* Add MC, MS, M+, M- commands and MR/MRC variable in qalc
 
 2020-09-25 Hanna Knutsson <hanna.knutsson@protonmail.com>
